[gd_scene load_steps=27 format=2]

[ext_resource path="res://1 Pink_Monster/Pink_Monster.png" type="Texture" id=1]
[ext_resource path="res://1 Pink_Monster/Pink_Monster_Jump_8.png" type="Texture" id=2]
[ext_resource path="res://1 Pink_Monster/Pink_Monster_Walk_6.png" type="Texture" id=3]
[ext_resource path="res://1 Pink_Monster/Pink_Monster_Run_6.png" type="Texture" id=4]
[ext_resource path="res://Jogador.gd" type="Script" id=5]
[ext_resource path="res://vida.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 14.8669, 29.6859 )

[sub_resource type="CapsuleShape2D" id=19]
radius = 20.4593
height = 25.3591

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 15.646, 10 )

[node name="Jogador" type="KinematicBody2D"]
position = Vector2( 68.1316, 142.741 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.308752, 0.00780261 )
rotation = 0.00554248
scale = Vector2( 1.92486, 1.80729 )
frames = SubResource( 17 )
animation = "Jump"
frame = 1

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = -500
limit_bottom = 600

[node name="Dano" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="ShapeDano" type="CollisionShape2D" parent="Dano"]
position = Vector2( -1, 1 )
shape = SubResource( 19 )

[node name="Morte" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MorteNaHora" type="CollisionShape2D" parent="Morte"]
position = Vector2( -1, 15.3975 )
rotation = 1.57079
shape = SubResource( 20 )

[node name="Status" type="CanvasLayer" parent="."]

[node name="Vida1" type="Sprite" parent="Status"]
position = Vector2( 39, 88 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[node name="Vida2" type="Sprite" parent="Status"]
position = Vector2( 71, 88 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[node name="Vida3" type="Sprite" parent="Status"]
position = Vector2( 103, 88 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="Dano" to="." method="_on_Dano_body_entered"]
[connection signal="body_entered" from="Morte" to="." method="_on_Morte_body_entered"]
